# jaxcad

./: .gitignore  .nojekyll  ARCHITECTURE.md  CLA.html  CLA.md  LAYERED_ARCHITECTURE.md  LICENSE  README.md  REFACTORING.md  _quarto.yml  generate_assets.py  index.html  index.qmd  objects.json  pyproject.toml  requirements.txt  robots.txt  search.json  sitemap.xml
docs/: getting-started.html  getting-started.qmd
examples/: 01_primitives_and_transforms.py  02_end_to_end_optimization.py  all_operations_showcase.py  all_primitives_showcase.py  basic_differentiability.py  basics.html  basics.ipynb  boolean_operations.py  compiler_demo.py  complex_geometry.py  complex_scene.py  complex_transforms.py  constrained_optimization.html  constrained_optimization.ipynb  constraints.html  constraints.ipynb  decorator_api.py  diff_render_fit.ipynb  differentiability.py  fluent_to_functional.py  gradient_optimization.py  layered_construction_demo.py  optimization.html  optimization.ipynb  optimization_example.py  parametric_optimization.py  primitives.py  quickstart.py  render.html  render.ipynb  renderer_profile.ipynb  rendering_demo.py  showcase_geometry.py  stablehlo_exploration.py  transforms.py
jaxcad/: __init__.py  boolean.py  compiler.py  constraints.py  core.py  extraction.py  fluent.py  functionalize.py  modifications.py  operations.py  parameters.py  parametric.py  parametrization.py  primitives.py  render.py  sdf.py  sketch.py  transforms.py  viz.py
reference/: constraints.angle.AngleConstraint.html  constraints.distance.DistanceConstraint.html  index.html  (+27 more)
(+181 files in other folders)
