[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "jaxcad"
version = "0.1.0"
description = "Fully differentiable CAD software built with JAX"
readme = "README.md"
requires-python = ">=3.9"
dependencies = [
    "jax[cuda12]>=0.4.20",
    "numpy>=1.24.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "matplotlib>=3.7.0",
]

[tool.setuptools.packages.find]
where = ["."]
include = ["jaxcad*"]

[dependency-groups]
dev = [
    "pytest>=7.0.0",
    "ruff>=0.8.0",
    "matplotlib>=3.7.0",
]

[tool.ruff]
line-length = 100
target-version = "py39"

[tool.ruff.lint]
select = [
    "E",      # pycodestyle errors
    "W",      # pycodestyle warnings
    "F",      # pyflakes
    "I",      # isort
    "B",      # flake8-bugbear
    "C4",     # flake8-comprehensions
    "UP",     # pyupgrade
    "ARG",    # flake8-unused-arguments
    "SIM",    # flake8-simplify
    "NPY",    # NumPy-specific rules
]
ignore = [
    "E501",   # line too long (handled by formatter)
    "B008",   # do not perform function calls in argument defaults
    "B905",   # zip without explicit strict parameter
]

[tool.ruff.lint.per-file-ignores]
"tests/*" = ["ARG", "SIM"]
"examples/*" = ["ARG"]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
line-ending = "auto"
